# photos

./: .travis.yml  README.md  meson.build
data/: io.elementary.photos.appdata.xml.in  io.elementary.photos.gresource.xml  meson.build  org.pantheon.photos-viewer.desktop.in.in
data/icons/: meson.build
plugins/: meson.build
plugins/pantheon-photos-publishing/: io.elementary.photos.plugins.publishing.gresource.xml  meson.build
plugins/pantheon-photos-publishing-extras/: TumblrPublishing.vala  io.elementary.photos.plugins.publishing-extras.gresource.xml  meson.build
plugins/pantheon-photos-transitions/: io.elementary.photos.plugins.transitions.gresource.xml  meson.build
po/extra/: POTFILES
src/: AppWindow.vala  Resources.vala  main.vala  meson.build
vapi/: config.vapi
